--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,7 @@ development:
 
 test:
   <<: *default
+  host:  <%= ENV.fetch('POSTGRES_HOST', 'localhost' ) %>
   database: agnessa_test
   user: <%= ENV.fetch('POSTGRES_USER', 'postgres' ) %>
   password: <%= ENV.fetch( 'POSTGRES_PASSWORD', 'password' ) %>    
