--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,11 @@
 default:  &settings
+  smtp:
+    user_name: <%= ENV.fetch('SMTP_USERNAME', '') %>
+    password: <%= ENV.fetch('SMTP_PASSWORD', '') %>
+    domain: <%= ENV.fetch('SMTP_DOMAIN', '') %>
+    address: <%= ENV.fetch('SMTP_ADDRESS', '') %>
+    port: <%= ENV.fetch('SMTP_PORT', 587) %>
+
   default_url_options: &default_url_options
     protocol: <%= ENV.fetch('HTTP_PROTOCOL', 'https') %>
     host: <%= ENV.fetch('AGNESSA_HOST', 'localhost') %>
@@ -11,9 +18,7 @@ default:  &settings
 
 development:
   <<: *settings
-
 production:
   <<: *settings
-
 test:
   <<: *settings
