Feature/send email #181605136 (#8)
* [#181624957] create applicant

* [#181605136]  upd gem

* [#181605136]  upd gem

* [#181605136]  add mailers

* [#181605136]  add email_from

* [#181605136] add client_from

* [#181605136] validate

* [#181605136] fix

* [#181605136] fix

* [#181605136] fix

* [#181605136] facotory

* [#181605136] send email on changr

* [#181605136] fix comment

* [#181605136] add smtp settings

* [#181605136] settings

* [#181605136] fix

* hotfix landing

* [#181605136] fix mailer

* [#181605136] reslove confilcts

Co-authored-by: Danil Pismenny <danil@brandymint.ru>

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,13 @@
 default:  &settings
+  smtp:
+    user_name: <%= ENV.fetch('SMTP_USERNAME', '') %>
+    password: <%= ENV.fetch('SMTP_PASSWORD', '') %>
+    domain: <%= ENV.fetch('SMTP_DOMAIN', '') %>
+    address: <%= ENV.fetch('SMTP_ADDRESS', '') %>
+    port: <%= ENV.fetch('SMTP_PORT', 587) %>
+    authentication: <%= ENV.fetch('SMTP_AUTHENTICATION', :plain) %>
+    enable_starttls_auto: <%= ENV.fetch('SMTP_TLS', true) %>
+
   default_url_options: &default_url_options
     protocol: <%= ENV.fetch('HTTP_PROTOCOL', 'https') %>
     host: <%= ENV.fetch('AGNESSA_HOST', 'localhost') %>
@@ -11,9 +20,7 @@ default:  &settings
 
 development:
   <<: *settings
-
 production:
   <<: *settings
-
 test:
   <<: *settings
