--- a/config/application.yml
+++ b/config/application.yml
@@ -12,11 +12,9 @@ default:  &settings
     protocol: <%= ENV.fetch('HTTP_PROTOCOL', 'https') %>
     host: <%= ENV.fetch('AGNESSA_HOST', 'localhost') %>
 
-  max_upload_file_size: 1_000_000
+  max_upload_file_size: <%= 100.megabytes %>
   country_priority: ['RU', 'KZ', 'BY', 'UA']
   document_formats: 'image/png,image/gif,image/jpeg,image/webp,image/*,video/mp4,video/mov'
-  # video_formats: 'video/mp4,video/mov'
-  # image_formats: 'image/png,image/gif,image/jpeg,image/webp,image/*'
 
 development:
   <<: *settings
