--- a/config/application.yml
+++ b/config/application.yml
@@ -22,3 +22,7 @@ production:
   <<: *settings
 test:
   <<: *settings
+
+  default_url_options: &default_url_options
+    host: localhost
+    protocol: http
