--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-signature": "^1.3.5",
     "jquery": "3.3.1",
     "moment": "^2.29.1",
+    "nprogress": "^0.2.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
