--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -56,6 +56,11 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'yarn'
+    - run: yarn install
     - run: bundle install
     - run: ./bin/rails db:create db:migrate RAILS_ENV=test
     - run: bundle exec rspec
