--- a/config/application.yml
+++ b/config/application.yml
@@ -15,7 +15,13 @@ default:  &settings
   min_upload_file_size:  <%= 100.kilobytes %>
   max_upload_file_size: <%= 100.megabytes %>
   country_priority: ['RU', 'KZ', 'BY', 'UA']
-  document_formats: 'image/png,image/gif,image/jpeg,image/webp,image/*,video/mp4,video/mov'
+  document_content_types: 
+    - image/png
+    - image/gif
+    - image/jpeg
+    - image/webp
+    - video/mp4
+    - video/mov
   reserved_subdomains: ['www', 'api']
 
 development:
