--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "animate.css": "3.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "better-dateinput-polyfill": "^3.3.1",
     "better-dom": "^4.1.0",
@@ -15,6 +16,7 @@
     "http-signature": "^1.3.5",
     "jquery": "3.3.1",
     "moment": "^2.29.1",
+    "noty": "^3.2.0-beta",
     "nprogress": "^0.2.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
