verification form file size hint

--- a/config/application.yml
+++ b/config/application.yml
@@ -16,6 +16,7 @@ default:  &settings
 
   min_upload_file_size:  <%= 50.kilobytes %>
   max_upload_file_size: <%= 10.megabytes %>
+  min_upload_files_amount: 3
   country_priority: ['RU', 'KZ', 'BY', 'UA']
   document_content_types: 
     - image/png
