--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react_ujs": "^2.6.1",
+    "react-dom": "^17.0.2",
     "selectize-bootstrap4-theme": "^2.0.2",
     "selectize.js": "^0.12.12",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^4.46.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^3"
   }
 }
