--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -21,6 +21,7 @@ jobs:
       POSTGRES_USER: runner
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: ['2.7.5']
 
@@ -65,5 +66,5 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: bundle install
-    - run: ./bin/rails db:create db:migrate RAILS_ENV=test
+    - run: bundle exec rake db:create db:migrate RAILS_ENV=test
     - run: bundle exec rspec
