[#182318431] Add id_types

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,11 @@
 default:  &settings
+
+  id_types:
+    - passport
+    - id_card
+    - driver_license
+    - foreign_passport
+
   mailer_defaults:
     from: <%= ENV.fetch('AGNESSA_REPLY_FROM', 'reply@localhost') %>
   smtp:
