--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -51,6 +51,8 @@ jobs:
           POSTGRES_PASSWORD: postgres
     steps:
     - uses: actions/checkout@v2
+    - name: Install ffmpegthumbnailer
+      run: sudo apt-get install -y ffmpegthumbnailer
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
