[#182009765] legacy verification document converter

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -48,7 +48,8 @@ jobs:
           --health-retries 5
         env:
           # required
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: runner
+          POSTGRES_PASSWORD: runner
     steps:
     - uses: actions/checkout@v2
     - name: Install ffmpegthumbnailer
