--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -54,6 +54,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install ffmpegthumbnailer
       run: sudo apt-get install -y ffmpegthumbnailer
+    - name: Install ffmpegthumbnailer
+      run: sudo apt-get install -y postgresql-client
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
@@ -65,5 +67,5 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: bundle install
-    - run: bundle exec rake db:setup RAILS_ENV=test
+    - run: bundle exec rake db:create db:migrate RAILS_ENV=test
     - run: bundle exec rspec
