Change postgres user to runner for tests

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,8 +17,8 @@ jobs:
   rspec:
     env:
       RAILS_ENV: test
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: runner
+      POSTGRES_USER: runner
     runs-on: ubuntu-latest
     strategy:
       matrix:
