--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,6 +19,7 @@ jobs:
       RAILS_ENV: test
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
+      PGUSER: postgres
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
