--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Install ffmpegthumbnailer
       run: sudo apt-get install -y ffmpegthumbnailer
     - run: sudo apt-get install -y pgxnclient
-    - run: pgxn install vector
+    - run: sudo pgxn install vector
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
