--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -73,6 +73,6 @@ jobs:
     - run: bundle install
     - run: bundle exec rake db:create
     - run: sudo apt-get install --yes postgresql-client
-    - run: psql -d agnessa_test -h localhost -U runner --password runner -c 'CREATE EXTENSION vector;'
+    - run: psql -h postgres -U runner --password runner -d agnessa_test  -c 'CREATE EXTENSION vector;'
     - run: bundle exec rake db:migrate RAILS_ENV=test
     - run: bundle exec rspec
