--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -51,7 +51,6 @@ jobs:
           # required
           POSTGRES_USER: runner
           POSTGRES_PASSWORD: runner
-          POSTGRES_HOST: postgres
 #      pgvector:
 #        image: ankane/pgvector
     steps:
@@ -73,6 +72,6 @@ jobs:
     - run: bundle install
     - run: bundle exec rake db:create
     - run: sudo apt-get install --yes postgresql-client
-    - run: psql -h postgres -U runner --password runner -d agnessa_test  -c 'CREATE EXTENSION vector;'
+    - run: psql -h localhost -U runner --password runner -d agnessa_test  -c 'CREATE EXTENSION vector;'
     - run: bundle exec rake db:migrate RAILS_ENV=test
     - run: bundle exec rspec
