--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -39,7 +39,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
       postgres:
-        image: postgres:13
+        image: mailer21/postgres:13.7-alpine-vector
         ports:
           - 5432:5432
         options: >-
