--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -39,7 +39,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
       postgres:
-        image: postgres:13
+        image: mailer21/postgres:13.7-alpine-vector
         ports:
           - 5432:5432
         options: >-
@@ -54,7 +54,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install ffmpegthumbnailer
-      run: sudo apt-get install -y ffmpegthumbnailer
+      run: sudo apt update && sudo apt install -y ffmpegthumbnailer
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
