--- a/config/database.yml
+++ b/config/database.yml
@@ -13,10 +13,16 @@ staging:
 development:
   <<: *default
   database: agnessa_development
+  host:  <%= ENV.fetch('POSTGRES_HOST', 'localhost' ) %>
+  port:  <%= ENV.fetch('AGNESSA_DATABASE_PORT', '5432' ) %>
+  user: <%= ENV.fetch('POSTGRES_USER', 'postgres' ) %>
+  password: <%= ENV.fetch( 'POSTGRES_PASSWORD', 'password' ) %>
 
 test:
   <<: *default
   host:  <%= ENV.fetch('POSTGRES_HOST', 'localhost' ) %>
   database: agnessa_test
   user: <%= ENV.fetch('POSTGRES_USER', 'postgres' ) %>
-  password: <%= ENV.fetch( 'POSTGRES_PASSWORD', 'password' ) %>    
+  password: <%= ENV.fetch( 'POSTGRES_PASSWORD', 'password' ) %>
+  port:  <%= ENV.fetch('AGNESSA_DATABASE_PORT', '5432' ) %>
+
