--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,8 @@
 default:  &settings
+  default_locale: ru
+  available_locales:
+    - ru
+    - en
 
   exclude_country_codes: ["AF", "AL", "DZ", "BD", "BO", "MM", "BI", "CF", "GN", "GW", "CU", "KP", "GH", "GW", "HT", "IR", "IQ", "LB", "LY", "ML", "MM", "NI", "PK", "QA", "SA", "SO", "SS", "SD", "SY", "TN", "UG", "US", "VU", "VE", "YE", "ZW"]
   available_documents:
